<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/lblFocusTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/focus_time"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/txtFocusTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="25 min"
            app:layout_constraintTop_toBottomOf="@id/lblFocusTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <SeekBar
            android:id="@+id/seekBarFocusTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:max="100"
            app:layout_constraintTop_toBottomOf="@id/txtFocusTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lblShortBreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_break"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@id/seekBarFocusTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/txtShortBreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5 min"
            app:layout_constraintTop_toBottomOf="@id/lblShortBreak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <SeekBar
            android:id="@+id/seekBarShortBreak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:max="100"
            app:layout_constraintTop_toBottomOf="@id/txtShortBreak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lblLongBreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_break"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@id/seekBarShortBreak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/txtLongBreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="15 min"
            app:layout_constraintTop_toBottomOf="@id/lblLongBreak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <SeekBar
            android:id="@+id/seekBarLongBreak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:max="100"
            app:layout_constraintTop_toBottomOf="@id/txtLongBreak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lblRounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rounds"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@id/seekBarLongBreak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/txtRounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="4"
            app:layout_constraintTop_toBottomOf="@id/lblRounds"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <SeekBar
            android:id="@+id/seekBarRounds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:max="100"
            app:layout_constraintTop_toBottomOf="@id/txtRounds"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lblAutorun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/autorun"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/seekBarRounds"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnAutorun" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/btnAutorun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:checked="true"
            app:layout_constraintTop_toTopOf="@id/lblAutorun"
            app:layout_constraintBottom_toBottomOf="@id/lblAutorun"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/lblMute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mute"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/lblAutorun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnMute" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/btnMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:checked="true"
            app:layout_constraintTop_toTopOf="@id/lblMute"
            app:layout_constraintBottom_toBottomOf="@id/lblMute"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_settings"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintTop_toBottomOf="@id/lblMute"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnReset"
            app:layout_constraintWidth_percent="0.45"
            android:text="@string/save"/>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_settings"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintTop_toTopOf="@id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSave"
            app:layout_constraintWidth_percent="0.45"
            android:text="@string/reset"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>