<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/sakura_focus_primary"
    tools:context=".feature.timer.presentation.view.TimerFragment">


    
    <View
        android:id="@+id/debugTriggerArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.08"
        android:clickable="true"
        android:focusable="true"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSettings"
        android:layout_width="@dimen/timer_button_size"
        android:layout_height="@dimen/timer_button_height"
        android:layout_marginBottom="@dimen/btn_settings_margin_bottom"
        android:layout_marginTop="@dimen/btn_settings_margin_top"
        android:contentDescription="@string/settings_description"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="@dimen/button_icon_size"
        app:iconTint="#222121"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:cornerRadius="@dimen/timer_button_size"
        app:backgroundTint="@color/sakura_focus_secondary"
        app:layout_constraintBottom_toTopOf="@+id/imgCharacter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imgCharacter"
        android:layout_width="@dimen/character_image_size"
        android:layout_height="@dimen/character_image_size"
        android:adjustViewBounds="true"
        android:contentDescription="@string/selected_character_description"
        android:scaleType="fitCenter"
        android:src="@drawable/character_animation"
        app:layout_constraintBottom_toTopOf="@+id/txtTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSettings" />

    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_light"
        android:textFontWeight="600"
        android:textColor="@color/white"
        android:textSize="@dimen/timer_text_size"
        app:layout_constraintBottom_toTopOf="@+id/roundCounterContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCharacter"
        tools:text="25:00"

        android:shadowColor="#80000000"
        android:shadowDx="0"
        android:shadowDy="3"
        android:shadowRadius="4"
        />

    <LinearLayout
        android:id="@+id/roundCounterContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounds_container"
        android:paddingVertical="8dp"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/rounds_container_margin_bottom"
        app:layout_constraintBottom_toTopOf="@+id/btnCharacterSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTimer">

        <View
            android:id="@+id/round1"
            android:layout_width="@dimen/round_indicator_size"
            android:layout_height="@dimen/round_indicator_size"
            android:layout_marginEnd="@dimen/round_indicator_margin"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/sakura_focus_secondary" />

        <View
            android:id="@+id/round2"
            android:layout_width="@dimen/round_indicator_size"
            android:layout_height="@dimen/round_indicator_size"
            android:layout_marginEnd="@dimen/round_indicator_margin"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/sakura_focus_secondary" />

        <View
            android:id="@+id/round3"
            android:layout_width="@dimen/round_indicator_size"
            android:layout_height="@dimen/round_indicator_size"
            android:layout_marginEnd="@dimen/round_indicator_margin"
            android:background="@drawable/round_button"
            android:backgroundTint="#80FFFFFF" />

        <View
            android:id="@+id/round4"
            android:layout_width="@dimen/round_indicator_size"
            android:layout_height="@dimen/round_indicator_size"
            android:background="@drawable/round_button"
            android:backgroundTint="#80FFFFFF" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCharacterSelect"
        android:layout_width="@dimen/timer_button_size"
        android:layout_height="@dimen/timer_button_height"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/character_selection_description"
        app:icon="@drawable/smiley_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="@dimen/button_icon_size"
        app:iconTint="#222121"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:cornerRadius="@dimen/timer_button_size"
        app:backgroundTint="@color/sakura_focus_secondary"
        app:layout_constraintBottom_toTopOf="@+id/controlButtonsGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundCounterContainer" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/controlButtonsGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlay"
        android:layout_width="@dimen/timer_button_size"
        android:layout_height="@dimen/timer_button_height"
        android:contentDescription="@string/play_button_description"
        app:icon="@drawable/ic_play"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="@dimen/button_icon_size"
        app:iconTint="#222121"
        app:cornerRadius="@dimen/timer_button_size"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:backgroundTint="@color/sakura_focus_secondary"
        app:layout_constraintBottom_toBottomOf="@+id/controlButtonsGuideline"
        app:layout_constraintEnd_toStartOf="@+id/btnPause"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/controlButtonsGuideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPause"
        android:layout_width="@dimen/timer_button_size"
        android:layout_height="@dimen/timer_button_height"
        android:contentDescription="@string/pause_button_description"
        app:icon="@drawable/ic_pause"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="@dimen/button_icon_size"
        app:iconTint="#222121"

        app:cornerRadius="@dimen/timer_button_size"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:backgroundTint="@color/sakura_focus_secondary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/controlButtonsGuideline"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintStart_toEndOf="@+id/btnPlay"
        app:layout_constraintTop_toTopOf="@+id/controlButtonsGuideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReset"
        android:layout_width="@dimen/timer_button_size"
        android:layout_height="@dimen/timer_button_height"
        android:contentDescription="@string/reset_button_description"
        app:backgroundTint="@color/sakura_focus_secondary"
        app:cornerRadius="@dimen/timer_button_size"
        app:icon="@drawable/ic_reset"
        app:iconGravity="textStart"
        app:iconPadding="0dp"

        app:iconSize="@dimen/button_icon_size"
        app:iconTint="#222121"
        style="@style/Widget.Material3.Button.ElevatedButton"
        app:layout_constraintBottom_toBottomOf="@+id/controlButtonsGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPause"
        app:layout_constraintTop_toTopOf="@+id/controlButtonsGuideline" />
</androidx.constraintlayout.widget.ConstraintLayout>